@@ -1,4 +1,5 @@
 - fix a debug message
+- fix downloading twice noarch packages on x86_64 with --download-all (mga#4867)
 - gurpmi:
   o install perl-{Glib,Gtk2} as priority upgrades prior to restart (mga#5066)
 - updated translations
